tests/flow/pop_without_push.smt2
(set-logic ALL)
(push 1)
(pop 2)
(exit)
